k8s/base/headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: headlamp
  ports:
  - name: http
    port: 80
    targetPort: 4466
  type: ClusterIP
