k8s/base/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: default
  labels:
    app: headlamp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /headlamp(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: headlamp-service
            port:
              number: 80
